test/testdata/classes/methods/class/unused_parameter_error.lox
class Foo {
  // error: z has been declared but is never used
  class add(x, y, z) {
    print x + y;
  }
}
